--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nprogress": "0.2.0",
     "qs": "^6.7.0",
     "vue": "2.5.17",
+    "vue-count-to": "^1.0.13",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
