--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "qs": "^6.7.0",
     "vue": "2.5.17",
     "vue-count-to": "^1.0.13",
+    "vue-moment": "^4.0.0",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
