--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue-count-to": "^1.0.13",
     "vue-moment": "^4.0.0",
     "vue-router": "3.0.1",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "8.5.0",
