--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue": "2.5.17",
     "vue-count-to": "^1.0.13",
     "vue-moment": "^4.0.0",
+    "vue-pusher": "^1.0.0",
     "vue-router": "3.0.1",
     "vuex": "3.0.1",
     "vuex-router-sync": "^5.0.0"
