--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-moment": "^4.0.0",
     "vue-pusher": "^1.0.0",
     "vue-router": "3.0.1",
+    "vue2-google-maps": "^0.10.6",
     "vuex": "3.0.1",
     "vuex-router-sync": "^5.0.0"
   },
