--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "qs": "^6.7.0",
+    "vee-validate": "^2.2.8",
     "vue": "2.5.17",
     "vue-count-to": "^1.0.13",
     "vue-moment": "^4.0.0",
