--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "element-ui": "2.4.6",
+    "emoji-mart-vue": "^2.6.6",
     "js-cookie": "2.2.0",
     "mockjs": "1.0.1-beta3",
     "moment": "^2.24.0",
@@ -25,6 +26,7 @@
     "vee-validate": "^2.2.8",
     "vue": "2.5.17",
     "vue-count-to": "^1.0.13",
+    "vue-goodshare": "^1.3.2",
     "vue-moment": "^4.0.0",
     "vue-pusher": "^1.0.0",
     "vue-router": "3.0.1",
