--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "sweetalert2": "^8.12.1",
     "vee-validate": "^2.2.8",
     "vue": "2.5.17",
+    "vue-async-computed": "^3.7.0",
     "vue-count-to": "^1.0.13",
     "vue-goodshare": "^1.3.2",
     "vue-moment": "^4.0.0",
     "vue-pusher": "^1.0.0",
     "vue-router": "3.0.1",
+    "vue-socket-cluster": "^1.0.3",
     "vue-sweetalert2": "^2.0.5",
     "vue2-google-maps": "^0.10.6",
     "vuex": "3.0.1",
