--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "element-ui": "2.4.6",
     "emoji-mart-vue": "^2.6.6",
     "js-cookie": "2.2.0",
-    "jspdf": "1.5.2",
+    "jspdf": "^1.5.2",
     "mockjs": "1.0.1-beta3",
     "moment": "^2.24.0",
     "normalize.css": "7.0.0",
@@ -32,7 +32,7 @@
     "vue-moment": "^4.0.0",
     "vue-pusher": "^1.0.0",
     "vue-router": "3.0.1",
-    "vue-sweetalert2": "^2.0.5",
+    "vue-sweetalert2": "^2.1.0",
     "vue2-google-maps": "^0.10.6",
     "vuex": "3.0.1",
     "vuex-router-sync": "^5.0.0"
