--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "@fullcalendar/core": "^4.2.0",
+    "@fullcalendar/daygrid": "^4.2.0",
+    "@fullcalendar/interaction": "^4.2.0",
+    "@fullcalendar/vue": "^4.2.2",
     "axios": "0.18.0",
     "element-ui": "2.4.6",
     "emoji-mart-vue": "^2.6.6",
