--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "sweetalert2": "^8.13.2",
     "vee-validate": "^2.2.12",
     "vue": "2.5.17",
+    "vue-cal": "^1.62.0",
     "vue-count-to": "^1.0.13",
     "vue-goodshare": "^1.3.2",
     "vue-moment": "^4.0.0",
     "vue-pusher": "^1.0.0",
     "vue-router": "3.0.1",
-    "vue-simple-calendar": "^4.2.2",
     "vue-sweetalert2": "^2.1.1",
     "vue2-google-maps": "^0.10.7",
     "vuex": "3.0.1",
