--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-moment": "^4.0.0",
     "vue-pusher": "^1.0.0",
     "vue-router": "3.0.1",
+    "vue-select-image": "^1.7.0",
     "vue-sweetalert2": "^2.1.1",
     "vue2-google-maps": "^0.10.7",
     "vuex": "3.0.1",
