--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.28",
     "element-ui": "^2.10.1",
     "emoji-mart-vue": "^2.6.6",
     "js-cookie": "2.2.0",
